Sequencer initial commit

--- a/public/app/components/device/view.html
+++ b/public/app/components/device/view.html
@@ -16,6 +16,7 @@
         <!--<input type="checkbox" ng-click="toggleNoteInput(true)" ng-model="device.note_input">-->
         <div class="toggle-keyboard-input" toggle-keyboard-input></div>
         <div slider class="slider-outter" ng-model="params.gain" min="0" max="1"></div>
+        <div ng-click="">Open note editor</div>
     </div>
     <div class="note-preview col-sm-9" notes-preview>
 
